fixed stylesheet so quote should no longer wrap.

--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,8 @@
-pre.quote {
+pre {
+    padding-top: 25px;
+}
+
+.quote {
     margin-bottom: 25px;
 }
 
